src/dotnet/Chat.UI.Blazor/Components/ChatMessageEditor/chat-message-editor.css
.chat-message-editor {
    @apply relative;
    @apply bg-07 md:bg-01;
}
.chat-message-editor.narrow {
    background: transparent;
}
.post-panel-wrapper {
    @apply -flex-y;
    @apply w-full;
    @apply overflow-x-hidden;
    @apply bg-transparent;
}
.narrow .post-panel-wrapper {
    background: linear-gradient(to bottom, rgba(255,255,255,0) 45%, rgba(68,68,68,1) 30%);
}
.narrow.narrow-panel .post-panel-wrapper {
    background: linear-gradient(to top, rgba(68,68,68,1) 75%, rgba(255,255,255,0) 25%);
}
.narrow .audio-panel-wrapper {
    @apply -mb-0.5;
    background: linear-gradient(to bottom, rgba(255,255,255,0) 70%, rgba(68,68,68,1) 0%);
}
.post-panel {
    @apply flex-x;
    @apply w-full min-h-12;
    @apply justify-between items-center;
    @apply border-bg-01  md:rounded-3xl outline-none;
    @apply bg-07 md:bg-03;
    @apply overflow-hidden;
    @apply break-all;
}
.post-panel .message-input {
    @apply flex-1;
    @apply max-h-48 md:max-h-88;
    @apply overflow-y-auto overflow-x-hidden;
    @apply outline-none;
    @apply text-counter md:text-02;
    @apply bg-07 md:bg-03;
    @apply cursor-text;
    word-break: break-word;

}
.post-panel .message-input .editor-content {
    @apply mr-0 md:mr-4;
    /* AY: It's an inline element that grows to flexbox container, so setting its width defines the weight,
       but flexbox ensures it never grows above what's allowed;
       I checked w-full, etc. - all these options let the text (1 long word) to overflow-x the container. */
}
.post-panel .message-input .editor-content::-webkit-scrollbar {
    display: none;
}

.not-recording {
    @apply text-03;
}

.recording {
    @apply text-toggle-on;
}

[contenteditable=true]:empty:not(:focus):before {
    @apply truncate;
    @apply text-placeholder text-base;
    content:attr(data-text)
}
/* Closed panel */
.notify-call-panel,
.notify-call-panel.panel-closed {
    @apply -flex-x;
    @apply h-12 w-12;
    @apply right-2;
    @apply bg-transparent;
}
.btn.btn-round.notify-call-toggle,
.panel-closed .btn.btn-round.notify-call-toggle {
    @apply flex-none flex-x;
    @apply h-12;
    @apply self-end;
    @apply p-0;
    @apply outline-none;
    @apply scale-100;
    @apply bg-07 md:bg-03;
    @apply text-05 md:text-icons-01;
}
.btn.btn-round.notify-call-toggle .btn-content {
    @apply min-w-12 min-h-12;
    @apply rounded-full;
    @apply bg-transparent;

}
.notify-call-content,
.panel-closed .notify-call-content {
    @apply flex-x;
    @apply w-0;
    @apply justify-end items-center;
    @apply gap-x-0;
    @apply scale-0;
    @apply cursor-text;
    @apply translate-x-full;
}
.notify-call-content .actions {
    @apply flex-x;
    @apply max-h-12;
    @apply items-center;
    @apply gap-x-2;
    @apply md:mr-4;
    @apply text-04 md:text-03;
}
.notify-call-content .btn {
    @apply flex-none;
    @apply min-w-0 min-h-0 h-auto;
    @apply px-0;
    @apply rounded-full;
}
.notify-call-content .btn.notify-btn {
    @apply bg-06 md:bg-04;
    @apply border-bg-06 md:border-bg-04;
    @apply text-04 md:text-03;
}
.notify-call-content .btn .btn-content {
    @apply items-center;
    @apply mx-0 -my-1 px-2;
    @apply rounded-full;
}
.notify-call-content .btn.close-btn {
    @apply flex;
    @apply h-12 w-12;
    @apply self-end;
    @apply p-0;
    @apply outline-none;
    @apply text-04 md:text-icons-01;
    @apply bg-transparent;
}
.notify-call-content .btn.close-btn .btn-content{
    @apply min-w-8 min-h-12;
    @apply items-center;
    @apply mx-0;
    @apply rounded-full;
    @apply bg-transparent;
}
.text-mode .notify-call-panel {
    @apply hidden;
}

/* Opening panel */
.panel-opening.notify-call-panel {
    @apply w-full;
    @apply bg-07 md:bg-transparent;
}
.panel-opening .btn.btn-round.notify-call-toggle {
    @apply w-0;
    @apply scale-0;
    @apply animate-notify-toggle-hide;
}
.panel-opening .notify-call-content {
    @apply w-full;
    @apply scale-100;
    @apply translate-x-0 transition duration-300 ease-in-out;
}

/* Closing panel */
.panel-closing .btn.btn-round.notify-call-toggle {
    @apply scale-100;
    @apply animate-notify-toggle-show;
}
.panel-closing .notify-call-content {
    @apply scale-0;
    @apply animate-notify-panel-closing;
}

.btn.btn-round.post-message {
    @apply hidden flex-none;
    @apply w-12;
    @apply self-end;
    @apply p-2;
    @apply outline-none;
    @apply text-05;
}

.text-mode .btn.btn-round.post-message {
    @apply flex md:hidden;
    @apply animate-display-from-left;
}
body.wide .attachment-mode .btn.btn-round.post-message {
    @apply flex;
    @apply min-w-12;
    @apply text-icons-01;
    @apply animate-display-from-left;
}

.text-mode .recorder-buttons .btn {
    @apply disabled;
}

.attachment-list-wrapper {
    @apply relative flex-y;
    @apply px-2;
    @apply border-y bg-01;
}
.attachment-list {
    @apply flex-1 flex-x;
    @apply w-full;
    @apply justify-start;
    @apply gap-x-4;
    @apply my-1 p-2;
    @apply overflow-x-auto;
}
.clear-attachments-btn.btn {
    @apply min-h-6 max-h-6;
    @apply border-transparent;
}
.clear-attachments-btn.btn:hover {
    @apply border-error;
}
.clear-attachments-btn.btn .btn-content {
    @apply min-w-full;
    @apply text-error font-medium;
}
.post-attachments-btn.btn.btn-round {
    @apply relative;
    @apply min-w-12;
    @apply self-center;
}
.post-attachments-btn.btn.btn-round .btn-content {
    @apply min-w-full;
    @apply bg-primary;
    @apply text-primary-title;
}
.attachment-wrapper {
    @apply relative;
    @apply p-px;
    @apply rounded-lg;
    @apply bg-03;
}
.attachment-item {
    @apply relative flex-y;
    @apply min-h-34 max-h-34 min-w-34 max-w-34;
    @apply justify-center;
    @apply gap-x-1;
    @apply mt-auto;
    @apply rounded-t-lg;
    @apply overflow-hidden;
}
.attachment-item > img {
    @apply min-h-34;
    @apply object-contain;
}
.remove-attachment-btn.btn {
    @apply absolute;
    @apply min-w-9 max-w-9 min-h-9 max-h-9;
    @apply top-0 right-0;
    @apply self-center;
    @apply text-04;
}
.remove-attachment-btn.btn .btn-content {
    @apply justify-center;
    background: rgba(0,0,0,0.4);
}
.remove-attachment-btn.btn .btn-content i {
    @apply opacity-80;
}
.remove-attachment-btn.btn:hover .btn-content {
    @apply bg-error opacity-80;
}
.attachment-filename {
    @apply flex-1;
    @apply w-full max-w-34;
    @apply self-center text-center;
    @apply truncate;
    @apply px-2 md:px-0.5 py-0.5;
    @apply rounded-b-lg;
    @apply cursor-default;
    @apply bg-01;
    @apply text-03 text-xs font-medium;
}
.add-attachment.btn .btn-content {
    @apply bg-04;
}
.add-attachment.btn:hover .btn-content {
    @apply bg-03;
}
.attach-btn.btn.btn-round {
    @apply self-start;
}
.attach-btn.btn.btn-round .btn-content {
    @apply bg-07 md:bg-03;
    @apply text-05 md:text-icons-01;
}
.attach-dropdown-menu {
    @apply absolute;
    @apply bottom-2;
}

.related-chat-entry-panel {
    @apply flex-x;
    @apply w-full h-10;
    @apply py-0;
    @apply outline-none;
    @apply bg-03;
}
.related-chat-entry {
    @apply flex-x;
    @apply w-full;
    @apply items-center;
    @apply px-2 md:py-2;
    @apply bg-03;
    @apply text-base;
    @apply cursor-pointer;
}
.related-chat-entry .btn.btn-round {
    @apply min-w-12 md:min-w-0;
    @apply mx-1 md:mx-2;
}
.related-chat-entry .btn.btn-round:hover .btn-content {
    @apply bg-transparent;
}
.related-chat-entry-panel .btn.btn-round .btn-content {
    @apply min-h-8 max-h-8;
}
.related-chat-entry-panel .btn.btn-round:hover .btn-content {
    @apply bg-transparent;
}

